<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/writer_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/writer_confirm"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onWrite"
            android:text="@string/write" />

        <Button
            android:id="@+id/writer_advance"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onShowAdvance"
            android:text="@string/advance"
            android:visibility="gone" />

        <Button
            android:id="@+id/writer_backup"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBackup"
            android:text="@string/backup"
            android:visibility="gone" />

        <Button
            android:id="@+id/writer_back"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBack"
            android:text="@string/back" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/writer_buttons_layout"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_writer_tips_without_tag"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/writer_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radiogroup_margin"
                android:background="@drawable/bg_black_solid"
                android:checkedButton="@+id/writer_radio_uri"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/writer_radio_uri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/write_uri" />

                <RadioButton
                    android:id="@+id/writer_radio_mime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/write_mime" />
            </RadioGroup>

            <TextView
                android:id="@+id/writer_bytes_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textview_tips_vertical_margin"
                android:layout_marginTop="@dimen/textview_tips_vertical_margin"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/writer_uri_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textview_tips_vertical_margin"
                    android:layout_marginTop="@dimen/textview_tips_vertical_margin"
                    android:text="@string/msg_write_uri_tips" />

                <EditText
                    android:id="@+id/writer_uri_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/edittext_horizontal_margin"
                    android:layout_marginRight="@dimen/edittext_horizontal_margin"
                    android:focusable="false"
                    android:hint="@string/hint_write_uri"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/writer_mime_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textview_tips_vertical_margin"
                    android:layout_marginTop="@dimen/textview_tips_vertical_margin"
                    android:text="@string/msg_write_mime_tips" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type" />

                    <EditText
                        android:id="@+id/writer_mime_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_write_mime_type"
                        android:inputType="textUri"
                        android:maxLength="255" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_ascii" />

                <EditText
                    android:id="@+id/writer_mime_ascii"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_write_mime_content"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_bytes" />

                    <CheckBox
                        android:id="@+id/writer_edit_bytes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </LinearLayout>

                <EditText
                    android:id="@+id/writer_mime_bytes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789-"
                    android:focusable="false"
                    android:hint="@string/hint_write_mime_bytes" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>