<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/reader_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/reader_more"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onShowMore"
            android:text="@string/check_tmp" />

        <Button
            android:id="@+id/reader_advance"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onShowAdvance"
            android:text="@string/advance"
            android:visibility="gone" />

        <Button
            android:id="@+id/reader_save"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSave"
            android:text="@string/save" />
    </LinearLayout>

    <ListView
        android:id="@+id/reader_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reader_buttons_layout"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/reader_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>